Add mock API
