# src/main/resources/META-INF/resources/api.yml
@@ -10,6 +10,8 @@ servers:
 tags:
   - name: contact-service
     description: contact-service
+  - name: Beneficiary Account
+    description: Beneficiary Account
 paths:
   /contacts:
     get:
@@ -110,7 +112,102 @@ paths:
                   type: string
       security:
         - Bearer: [ ]
-
+  /beneficiaries/-/mobile-numbers/{mobileNumber}:
+    get:
+      tags:
+        -  Beneficiary Account
+      summary: Lookup beneficiary account by mobile number
+      description: Lookup beneficiary account by mobile number
+      operationId:  lookupBeneficiaryAccountWithMobile
+      parameters:
+        - name: mobileNumber
+          in: path
+          description: Mobile Number
+          required: true
+          schema:
+            type: string
+          example: 65086508427
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BeneficiaryAccountResponse'
+        503:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        404:
+          description: Data Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        400:
+          description: Input data is invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+      security:
+        - Bearer: [ ]
+  /beneficiaries/-/account-numbers/{accountNumber}:
+    get:
+      tags:
+        - Beneficiary Account
+      summary: Lookup beneficiary account by account number
+      description: Lookup beneficiary account by account number
+      operationId:  lookupBeneficiaryAccount
+      parameters:
+        - name: accountNumber
+          in: path
+          description: Account Number
+          required: true
+          schema:
+            type: string
+          example: 120086508427
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BeneficiaryAccountResponse'
+        503:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        404:
+          description: Data Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        400:
+          description: Input data is invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+      security:
+        - Bearer: [ ]
 #-----
 components:
   schemas:
@@ -163,6 +260,23 @@ components:
         code:
           type: string
         message:
+          type: string
+    BeneficiaryAccountResponse:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/BeneficiaryAccount'
+    BeneficiaryAccount:
+      type: object
+      properties:
+        accountId:
+          type: string
+          format: uuid
+          readOnly: true
+        accountNumber:
+          type: string
+          readOnly: true
+        displayName:
           type: string
     BeneficiaryRecord:
       type: object
